fixed sizing issue on mobile

--- a/src/app/answer/answer.component.scss
+++ b/src/app/answer/answer.component.scss
@@ -64,3 +64,9 @@ button {
   flex-direction: column;
   gap: 2rem;
 }
+
+@media (max-width: 1050px) {
+  .container {
+    gap: .5rem;
+  }
+}
